--- a/MiniRoverInterfaceCs/MiniRoverInterfaceCs.csproj
+++ b/MiniRoverInterfaceCs/MiniRoverInterfaceCs.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SerialRecieveSend.cs" />
     <Compile Include="Interface.cs">
       <SubType>Form</SubType>
     </Compile>
