Changed SerialRecieveSend into partial of Interface and changed ArmRun[] to byte

--- a/MiniRoverInterfaceCs/MiniRoverInterfaceCs.csproj
+++ b/MiniRoverInterfaceCs/MiniRoverInterfaceCs.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SerialRecieveSend.cs" />
+    <Compile Include="SerialRecieveSend.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Interface.cs">
       <SubType>Form</SubType>
     </Compile>
