Minor code cleanup, separated Interface.cs into InterfaceWheelControls.cs and InterfaceArmControls.cs

--- a/MiniRoverInterfaceCs/MiniRoverInterfaceCs.csproj
+++ b/MiniRoverInterfaceCs/MiniRoverInterfaceCs.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InterfaceArmControls.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InterfaceWheelControls.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SerialRecieveSend.cs">
       <SubType>Form</SubType>
     </Compile>
