--- a/MiniRoverInterfaceCs/MiniRoverInterfaceCs.csproj
+++ b/MiniRoverInterfaceCs/MiniRoverInterfaceCs.csproj
@@ -47,12 +47,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KeyInputHandler.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="KeyInputHandler.Designer.cs">
-      <DependentUpon>KeyInputHandler.cs</DependentUpon>
-    </Compile>
     <Compile Include="Interface.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +64,13 @@
     <Compile Include="SerialRecieveSend.cs">
       <DependentUpon>Interface.cs</DependentUpon>
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KeyInputHandler.cs">
+      <DependentUpon>Interface.cs</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KeyInputHandler.Designer.cs">
+      <DependentUpon>KeyInputHandler.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
